--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -10,4 +10,4 @@ typeMismatch=Formato non valido
 
 provider.duplicate=Questo fornitore esiste giï¿½
 review.duplicate=Questo commento esiste giï¿½
-product.duplicate.product=Questo giocatore esiste già
+product.duplicate.product=Questo prodotto esiste già
